# lx-audiolabs

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-local-zip.ps1  clippy.toml  truce-rightclick-bug-report.md  truce.toml
.cargo-tools/: .crates.toml  .crates2.json
.claude/: settings.json
.claude/agents/: dsp-auditor.md  vault-keeper.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build-aether.yml  build-aurum.yml  build-equilibrium.yml  build-lucent.yml  build-macos.yml  build-meridian.yml  build-windows.yml  build.yml
aether/: Cargo.toml
aether/src/: editor.rs
aurum/: Cargo.toml
aurum/src/: editor.rs  lib.rs
baseview-local/: Cargo.toml
baseview-local/src/platform/win/: window.rs  window_state.rs
baseview-local/src/wrappers/win32/window/: handle.rs
baseview-truce-local/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
baseview-truce-local/src/: window.rs
baseview-truce-local/src/macos/: cursor.rs  mod.rs  view.rs  window.rs
baseview-truce-local/src/win/: window.rs
baseview-truce-local/src/x11/: event_loop.rs  window.rs
crates/lx-analysis/: Cargo.toml
crates/lx-analysis/src/: lib.rs
crates/lx-dsp/: Cargo.toml
crates/lx-dsp/src/: state_migration.rs
crates/lx-shm/: Cargo.toml
crates/lx-shm/src/: lib.rs
crates/lx-ui/: Cargo.toml
crates/lx-ui/examples/: profile.rs
crates/lx-ui/src/: buttons.rs  canvas.rs  layer_cache.rs  profile.rs
crates/lx-vault/: Cargo.toml
crates/lx-vault/src/: lib.rs
docs/archive/: iced-legacy-color-palette.md
equilibrium/: Cargo.toml
lucent/: Cargo.toml
lucent-relay/: Cargo.toml
lucent-relay/src/: editor.rs  lib.rs
lucent/src/: editor.rs  lib.rs
lucent/src/ui/: mod.rs  relay_state.rs
meridian/: Cargo.toml
plugins/aether/: Cargo.toml
plugins/aether/src/: aether_canvas.rs  editor.rs  lib.rs  main.rs
plugins/aurum/: Cargo.toml
plugins/aurum/src/: editor.rs  lib.rs  main.rs
plugins/equilibrium/: Cargo.toml
plugins/equilibrium-egui/: Cargo.toml
plugins/equilibrium-egui/src/: editor.rs  lib.rs  main.rs
plugins/equilibrium/src/: editor.rs  lib.rs  main.rs  vizia_canvas.rs  vizia_widgets.rs
plugins/lucent/: Cargo.toml
plugins/lucent-relay/: Cargo.toml
plugins/lucent-relay/src/: editor.rs  lib.rs  main.rs
plugins/lucent/src/: editor.rs  lib.rs  main.rs  vizia_canvas.rs  vizia_widgets.rs
plugins/lucent/src/ui/: mod.rs  relay_state.rs
plugins/meridian/: Cargo.toml
plugins/meridian/src/: editor.rs  lib.rs  main.rs  vizia_canvas.rs
shared-analysis/: Cargo.toml
shared-analysis/src/: dev_log.rs  lib.rs  shm.rs  snap_fft.rs
shared-dsp/: Cargo.toml
shared-dsp/src/: lib.rs  state_migration.rs
shared-ui/: Cargo.toml
shared-ui/examples/: profile.rs
shared-ui/src/: buttons.rs  canvas.rs  layer_cache.rs  lib.rs  panels.rs  profile.rs  widgets.rs
shared-ui/src/editor/: common.rs  factory.rs  mod.rs  notifier.rs
shared-vault/: Cargo.toml
shared-vault/src/: lib.rs
shm-hub/: Cargo.toml
shm-hub/src/: lib.rs
truce-clap-local/: .cargo_vcs_info.json  Cargo.toml  LICENSE  LICENSE-APACHE
truce-clap-local/src/: lib.rs
truce-iced-local/: .cargo_vcs_info.json  Cargo.toml
truce-iced-local/src/: editor.rs  runtime.rs
truce-local/truce-gpu/: Cargo.toml
truce-local/truce-gpu/src/: platform.rs
truce-local/truce-gui/: Cargo.toml
truce-local/truce-gui/src/: platform.rs
truce-params-local/: .cargo_vcs_info.json  Cargo.toml
vizia-baseview-local/src/: parent_window.rs
vizia-local/: Cargo.toml
vizia-local/crates/vizia_core/: Cargo.toml
vizia-local/crates/vizia_core/src/context/: mod.rs
