[workspace]
members = [
    "shared-dsp",
    "shared-analysis",
    "shared-vault",
    "shared-ui",
    "shm-hub",
    "plugins/aether",
    "plugins/equilibrium",
    "plugins/meridian",
]
resolver = "3"

[workspace.dependencies]
# LX fork: main = upstream + suite patches (truce-vizia ↔ vizia-audio). No PRs upstream.
truce           = { git = "https://github.com/LX-Audiolabs/truce", branch = "main", default-features = false }
truce-core      = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-params    = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-clap      = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-vst3      = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-lv2       = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-loader    = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-test      = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-vizia     = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
clap-sys        = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.shell]
inherits = "release"

[profile.dbg]
inherits = "release"
strip = false
debug = "full"

# truce-vizia and plugins/shared-ui all pin LX-Audiolabs/vizia-audio (same source).
# baseview DPI guard lives inside vizia-audio — no baseview-local patch needed.
