[workspace]
members = [
    "baseview-local",
    "vizia-baseview-local",
    "shared-dsp",
    "shared-analysis",
    "shared-vault",
    "shared-ui",
    "shm-hub",
    "plugins/aether",
    "plugins/equilibrium",
    "plugins/meridian",
]
resolver = "3"

[workspace.dependencies]
# LX fork: main = upstream + suite patches. No PRs upstream.
truce           = { git = "https://github.com/LX-Audiolabs/truce", branch = "main", default-features = false }
truce-core      = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-params    = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-clap      = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-vst3      = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-lv2       = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-loader    = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-test      = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
truce-vizia     = { git = "https://github.com/LX-Audiolabs/truce", branch = "main" }
vizia           = { git = "https://github.com/vizia/vizia", branch = "main", default-features = false, features = ["baseview"] }
clap-sys        = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.shell]
inherits = "release"

[profile.dbg]
inherits = "release"
strip = false
debug = "full"

# Replace upstream vizia_baseview with our fork (parented-window fixes).
[patch."https://github.com/vizia/vizia"]
vizia_baseview = { path = "vizia-baseview-local" }

# Replace crates.io baseview with vendored copy (new_parented() REAPER fix).
[patch.crates-io]
baseview = { path = "baseview-local" }
