[package]
name = "aether"
version = "1.1.0"
edition = "2024"
description = "LX Audiolabs — Aether (Headphone monitoring corrector — Harman 5-band EQ + crossfeed)"
license = "MIT"
authors = ["LX Audiolabs"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["clap"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
shell = ["truce/shell", "clap"]

[dependencies]
truce        = { version = "1.0.1", default-features = false }
truce-core   = "1.0.1"
truce-params = "1.0.1"
truce-clap   = { version = "1.0.1", optional = true }
truce-vst3   = { version = "1.0.1", optional = true }
truce-loader = "1.0.1"
truce-iced   = "1.0.1"
clap-sys     = { version = "0.5", optional = true }

shared-dsp      = { path = "../shared-dsp" }
shared-analysis = { path = "../shared-analysis" }
shared-ui       = { path = "../shared-ui" }
tracing         = "0.1"

[dev-dependencies]
truce-test = "1.0.1"
