[package]
name = "lucent-relay"
version = "0.1.0"
edition = "2024"
description = "LX Audiolabs — Lucent Relay (FFT sender, pure pass-through)"
license = "MIT"
authors = ["LX Audiolabs"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["clap"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
shell = ["truce/shell", "clap"]

[dependencies]
truce        = { version = "1.0.4", default-features = false }
truce-core   = "1.0.4"
truce-params = "1.0.4"
truce-clap   = { version = "1.0.4", optional = true }
truce-vst3   = { version = "1.0.4", optional = true }
truce-loader = "1.0.4"
truce-iced   = "1.0.4"
clap-sys     = { version = "0.5", optional = true }

shared-dsp      = { path = "../shared-dsp" }
shared-analysis = { path = "../shared-analysis" }
shared-ui       = { path = "../shared-ui" }
tracing         = "0.1"
realfft         = "3"

[dev-dependencies]
truce-test = "1.0.4"
