[package]
name = "lucent"
version = "0.2.49"
edition = "2024"
description = "LX Audiolabs — Lucent (FFT spectrum analyser — receives relay data and displays masking)"
license = "MIT"
authors = ["LX Audiolabs"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["clap"]
clap = ["dep:truce-clap", "dep:clap-sys"]

[dependencies]
truce        = { version = "1.0.1", default-features = false }
truce-core   = "1.0.1"
truce-params = "1.0.1"
truce-clap   = { version = "1.0.1", optional = true }
truce-loader = "1.0.1"
truce-iced   = "1.0.1"
clap-sys     = { version = "0.5", optional = true }

shared-dsp      = { path = "../shared-dsp" }
shared-analysis = { path = "../shared-analysis", features = ["dev-logging"] }
shared-ui       = { path = "../shared-ui" }
tracing         = "0.1"
realfft         = "3"
