[package]
name = "meridian"
version = "1.6.0"
edition = "2024"
description = "LX Audiolabs — Meridian (Track and group shaper with 5-band EQ, compressor, and saturation)"
license = "MIT"
authors = ["LX Audiolabs"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["clap"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
shell = ["truce/shell", "clap"]

[dependencies]
truce        = { version = "1.0.4", default-features = false }
truce-core   = "1.0.4"
truce-params = "1.0.4"
truce-clap   = { version = "1.0.4", optional = true }
truce-vst3   = { version = "1.0.4", optional = true }
truce-loader = "1.0.4"
truce-iced   = "1.0.4"
clap-sys     = { version = "0.5", optional = true }

shared-dsp      = { path = "../shared-dsp" }
shared-analysis = { path = "../shared-analysis" }
realfft         = "3"
tracing         = "0.1"

[dev-dependencies]
truce-test = "1.0.4"
