[package]
name = "shared-analysis"
version = "0.1.0"
edition = "2021"

[features]
dev-logging = ["tracing-subscriber", "tracing-appender"]

[dependencies]
atomic_float = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-appender = { version = "0.2", optional = true }
shared-vault = { path = "../shared-vault" }
realfft = "3"
num-complex = "0.4"
shared_memory = "0.12"

