[package]
name = "shared-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
nice-plug = "0.1.10"
nice-plug-iced = { version = "0.1.3", default-features = false, features = ["wgpu", "crisp", "web-colors", "smol", "thread-pool", "fira-sans", "x11", "canvas", "unconditional-rendering"] }
iced_futures = "0.14"
shared-analysis = { path = "../shared-analysis" }
