[package]
name = "shared-ui"
version = "2.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "LX Audiolabs shared Vizia UI widgets, canvas views, and drawing helpers"

[dependencies]
vizia = { git = "https://github.com/vizia/vizia.git", rev = "24c47433098fcc8e29668a22fcb71771807d86d6", default-features = false, features = ["baseview"] }
