[package]
name = "lx-ui"
version = "2.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "LX Audiolabs shared Vizia UI widgets, canvas views, and drawing helpers"

[dependencies]
# Must match truce-vizia + plugins (LX-Audiolabs/vizia-audio main).
vizia = { workspace = true }

# copypasta (via vizia clipboard) only defines ClipboardContext on Linux when
# the x11 feature is on. Windows/macOS use native backends without this.
# Feature-unifies into every plugin that depends on lx-ui.
[target.'cfg(target_os = "linux")'.dependencies]
vizia = { workspace = true, features = ["x11"] }
