[package]
name = "aether"
version = "1.2.7"
edition = "2024"
description = "LX Audiolabs — Aether (Headphone monitoring corrector — Harman 5-band EQ + crossfeed)"
license = "GPL-3.0-or-later"
authors = ["LX Audiolabs"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["clap"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
lv2  = ["dep:truce-lv2"]
shell = ["truce/shell", "clap"]

[dependencies]
truce        = { workspace = true }
truce-core   = { workspace = true }
truce-params = { workspace = true }
truce-clap   = { workspace = true, optional = true }
truce-vst3   = { workspace = true, optional = true }
truce-lv2    = { workspace = true, optional = true }
truce-loader = { workspace = true }
truce-vizia  = { workspace = true }
# Same source as truce-vizia (LX-Audiolabs/vizia-audio) — one package identity.
vizia        = { workspace = true }
clap-sys     = { workspace = true, optional = true }

shared-dsp      = { path = "../../shared-dsp" }
shared-analysis = { path = "../../shared-analysis" }
shared-ui       = { path = "../../shared-ui" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tracing         = "0.1"

[dev-dependencies]
truce-test = { workspace = true }
