[package]
name = "equilibrium"
version = "1.6.8"
edition = "2024"
description = "LX Audiolabs — Equilibrium (Pre-master spectral balancer with 5-band crossover)"
license = "GPL-3.0-or-later"
authors = ["LX Audiolabs"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# "standalone" dropped for the Vizia port, same reasoning as Lucent's
# Cargo.toml: truce-standalone's "gui" feature unconditionally pulls
# truce-gui -> wgpu -> wgpu-hal, the exact dependency chain this
# migration exists to get away from.
default = ["clap"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
shell = ["truce/shell", "clap"]

[dependencies]
truce        = { workspace = true }
truce-core   = { workspace = true }
truce-params = { workspace = true }
truce-clap   = { workspace = true, optional = true }
truce-vst3   = { workspace = true, optional = true }
truce-loader = { workspace = true }
truce-vizia  = { git = "https://github.com/truce-audio/truce", tag = "v3.1.4" }
# Same git rev truce-vizia itself pins - must be identical so `Context`/
# `Canvas`/etc are the same type, not just the same version number from a
# different source (crates.io vs this git rev would be distinct types).
vizia        = { git = "https://github.com/vizia/vizia.git", rev = "24c47433098fcc8e29668a22fcb71771807d86d6", default-features = false, features = ["baseview", "clipboard"] }
clap-sys     = { workspace = true, optional = true }

shared-dsp      = { path = "../../shared-dsp" }
shared-analysis = { path = "../../shared-analysis" }
shared-ui       = { path = "../../shared-ui" }
tracing         = "0.1"

[dev-dependencies]
truce-test = { workspace = true }
