[package]
name = "lucent-relay"
version = "0.1.0"
edition = "2024"
description = "LX Audiolabs — Lucent Relay (FFT sender, pure pass-through)"
license = "MIT"
authors = ["LX Audiolabs"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# "standalone" dropped for the Vizia pilot - see plugins/lucent/Cargo.toml
# for why (truce-standalone's "gui" feature pulls wgpu back in).
default = ["clap"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
shell = ["truce/shell", "clap"]

[dependencies]
truce        = { workspace = true }
truce-core   = { workspace = true }
truce-params = { workspace = true }
truce-clap   = { workspace = true, optional = true }
truce-vst3   = { workspace = true, optional = true }
truce-loader = { workspace = true }
truce-vizia  = { git = "https://github.com/truce-audio/truce", tag = "v2.0.0" }
clap-sys     = { workspace = true, optional = true }

shared-dsp      = { path = "../../shared-dsp" }
shared-analysis = { path = "../../shared-analysis" }
tracing         = "0.1"
realfft         = "3"

[dev-dependencies]
truce-test = { workspace = true }
