[package]
name = "lucent-relay"
version = "0.3.0"
edition = "2024"
description = "LX Audiolabs — Lucent Relay (FFT sender, pure pass-through)"
license = "GPL-3.0-or-later"
authors = ["LX Audiolabs"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# "standalone" dropped for the Vizia pilot - see plugins/lucent/Cargo.toml
# for why (truce-standalone's "gui" feature pulls wgpu back in).
default = ["clap"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
shell = ["truce/shell", "clap"]

[dependencies]
truce        = { workspace = true }
truce-core   = { workspace = true }
truce-params = { workspace = true }
truce-clap   = { workspace = true, optional = true }
truce-vst3   = { workspace = true, optional = true }
truce-loader = { workspace = true }
truce-vizia  = { git = "https://github.com/truce-audio/truce", tag = "v3.1.2" }
vizia        = { git = "https://github.com/vizia/vizia.git", rev = "24c47433098fcc8e29668a22fcb71771807d86d6", default-features = false, features = ["baseview", "clipboard"] }
clap-sys     = { workspace = true, optional = true }

shared-analysis = { path = "../../shared-analysis" }
tracing         = "0.1"
realfft         = "3"

[dev-dependencies]
truce-test = { workspace = true }
