[package]
name = "lucent"
version = "0.3.0"
edition = "2024"
description = "LX Audiolabs — Lucent (FFT spectrum analyser — receives relay data and displays masking)"
license = "MIT"
authors = ["LX Audiolabs"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# "standalone" dropped for the Vizia pilot: truce-standalone's "gui"
# feature (set workspace-wide) unconditionally pulls truce-gui -> wgpu
# -> wgpu-hal, which is exactly the broken dependency chain this
# migration exists to get away from. Not needed to prove out CLAP
# embedding in a DAW. Re-add once truce-standalone offers a
# non-wgpu/vizia-backed standalone window, or once we don't care
# about wgpu leaking back in.
default = ["clap"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
shell = ["truce/shell", "clap"]

[dependencies]
truce        = { workspace = true }
truce-core   = { workspace = true }
truce-params = { workspace = true }
truce-clap   = { workspace = true, optional = true }
truce-vst3   = { workspace = true, optional = true }
truce-loader = { workspace = true }
truce-vizia  = { git = "https://github.com/truce-audio/truce", tag = "v2.0.0" }
# Same git rev truce-vizia itself pins - must be identical so `Context`/
# `Canvas`/etc are the same type, not just the same version number from a
# different source (crates.io vs this git rev would be distinct types).
vizia        = { git = "https://github.com/vizia/vizia.git", rev = "24c47433098fcc8e29668a22fcb71771807d86d6", default-features = false, features = ["baseview", "clipboard"] }
clap-sys     = { workspace = true, optional = true }

shared-dsp      = { path = "../../shared-dsp" }
shared-analysis = { path = "../../shared-analysis", features = ["dev-logging"] }
shared-ui       = { path = "../../shared-ui" }
tracing         = "0.1"
realfft         = "3"

[dev-dependencies]
truce-test = { workspace = true }
