[package]
name = "meridian"
version = "1.9.8"
edition = "2024"
description = "LX Audiolabs — Meridian (Track and group shaper with 5-band EQ, compressor, and saturation)"
license = "GPL-3.0-or-later"
authors = ["LX Audiolabs"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# "standalone" dropped for the Vizia port, same reasoning as Lucent's
# Cargo.toml: truce-standalone's "gui" feature unconditionally pulls
# truce-gui -> wgpu -> wgpu-hal, the exact dependency chain this
# migration exists to get away from.
default = ["clap"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
lv2  = ["dep:truce-lv2"]
shell = ["truce/shell", "clap"]

[dependencies]
truce        = { workspace = true }
truce-core   = { workspace = true }
truce-params = { workspace = true }
truce-clap   = { workspace = true, optional = true }
truce-vst3   = { workspace = true, optional = true }
truce-lv2    = { workspace = true, optional = true }
truce-loader = { workspace = true }
truce-vizia  = { workspace = true }
# Same path truce-vizia + lx-ui pin (vizia-audio). Must be identical so
# `Context`/`Canvas`/etc are the same type, not two package sources.
vizia = { workspace = true }
clap-sys     = { workspace = true, optional = true }

lx-dsp      = { path = "../../crates/lx-dsp" }
lx-analysis = { path = "../../crates/lx-analysis" }
lx-ui       = { path = "../../crates/lx-ui" }
realfft         = "3"
tracing         = "0.1"

[dev-dependencies]
truce-test = { workspace = true }
